viewport maintenance page

--- a/maintenance/index.html
+++ b/maintenance/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="robots" value="NOINDEX,NOFOLLOW" />
+    <meta name=viewport content="width=device-width,initial-scale=1">
     <link media="all"  rel="stylesheet" href="css/styles.css" />
     <title>Mel Fitness</title>
   </head>
